Buttons rearranged. Now there is a start button to start the timer, and a separate Pause/Resume Button (disabled until timer is started). When the timer is started, the start button is replaced by a Stop button. When the break is playing, Stop and Skip Break buttons are visible. Timer numbers are now aligned so that they are centred in the Pomodoro div, and also do not 'jump' when the numbers change.

--- a/css/main.css
+++ b/css/main.css
@@ -118,13 +118,7 @@ input{
     border-radius:3px;
 }
 
-#pomodoroDiv {
-    margin:30px;
-    background-color: #e5e5e5;
-    height:300px;
-    width: 300px;
-    float: right;
-}
+
 
 /*===============================================================================================*/
 /*TESTING LAYERS */
