--- a/css/pomodoro.css
+++ b/css/pomodoro.css
@@ -9,26 +9,53 @@
 
 .working{
     color: darkseagreen;
-    font-family: sans-serif;
-    font-size: 4em;
 }
 
 
 .break{
     color: #31b0d5;
-    font-family: sans-serif;
-    font-size: 4em;
 }
 
 .longBreak{
     color: #337ab7;
-    font-family: sans-serif;
-    font-size: 4em;
 }
 
 .none{
     color: #c3c3c3;
-    font-family: sans-serif;
-    font-size: 4em;
 }
 
+#pomodoroDiv {
+    margin:30px;
+    background-color: #e5e5e5;
+    height:300px;
+    width: 300px;
+    float: right;
+}
+
+.pomButtonShow {
+    width: 40%;
+    margin: 4%;
+
+}
+
+.pomButtonShow:hover {
+    width: 40%;
+    margin: 4%;
+}
+
+#clock{
+    position: relative;
+    margin: auto;
+    width: 60%;
+    font-family: sans-serif;
+    font-size: 5em;
+    margin-top: 30%;
+}
+
+#minsDiv {
+    float: left;
+}
+
+#secsDiv {
+    float: right;
+}
